--- a/task3/index.html
+++ b/task3/index.html
@@ -120,8 +120,10 @@
             'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tataimg.jpg',  // Change this to your actual image paths
             'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata4.jpg',
             'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata3.jpg',
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata3.jpg',
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata1.png'
+            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata2.jpg',
+            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata1.png',
+            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata.jpg'
+            
         ];
 
         let index = 0;
