--- a/task3/index.html
+++ b/task3/index.html
@@ -117,12 +117,12 @@
     <script>
         // List of images for background rotation
         const images = [
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tataimg.jpg',  // Change this to your actual image paths
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata4.jpg',
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata3.jpg',
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata2.jpg',
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata1.png',
-            'C:/Users/Nagabindu pasupuleti/OneDrive/Desktop/oasis/tata.jpg'
+            './tataimg.jpg',  // Change this to your actual image paths
+            './tata4.jpg',
+            './tata3.jpg',
+            './tata2.jpg',
+            './tata1.png',
+            './tata.jpg'
             
         ];
 
